--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -192,6 +192,7 @@
     <Compile Include="Menu\IGMData\Commands.cs" />
     <Compile Include="Menu\IGMData\Dialog\Confirm.cs" />
     <Compile Include="Menu\IGMData\Group\Base.cs" />
+    <Compile Include="Menu\IGMData\Pool\Item.cs" />
     <Compile Include="Menu\IGMData\Pool\Draw.cs" />
     <Compile Include="Menu\IGMData\Pool\Draw\Commands.cs" />
     <Compile Include="Menu\IGMData\Pool\BlueMagic.cs" />
@@ -794,7 +795,6 @@
     <Compile Include="Menu\IGM\IGMData\IGMData_PartyGroup.cs" />
     <Compile Include="Menu\IGM\IGMData\IGMData_SideMenu.cs" />
     <Compile Include="Menu\IGM_Items\IGMData\IGMData_Help.cs" />
-    <Compile Include="Menu\IGMData\IGMData_ItemPool.cs" />
     <Compile Include="Menu\IGM_Items\IGMData\IGMData_Statuses.cs" />
     <Compile Include="Menu\IGM_Items\IGMData\IGMData_TargetPool.cs" />
     <Compile Include="Menu\IGM_Items\IGMData\IGMData_TopMenu.cs" />
