Base pool moved to it's own namespace

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -192,6 +192,7 @@
     <Compile Include="Menu\IGMData\Commands.cs" />
     <Compile Include="Menu\IGMData\Dialog\Confirm.cs" />
     <Compile Include="Menu\IGMData\Group\Base.cs" />
+    <Compile Include="Menu\IGMData\Pool\Base.cs" />
     <Compile Include="Menu\IGMData\Pool\Magic\Commands.cs" />
     <Compile Include="Menu\IGMData\Pool\Magic.cs" />
     <Compile Include="Menu\IGMData\Pool\Item.cs" />
@@ -787,7 +788,6 @@
     <Compile Include="Menu\Images\Icons.ID.cs" />
     <Compile Include="Menu\Images\Icons.InsertCustomEntries.cs" />
     <Compile Include="Menu\IGMData\Obsolete\IGMData_Container.cs" />
-    <Compile Include="Menu\IGMData\IGMData_Pool.cs" />
     <Compile Include="Menu\IGM\IGM.cs" />
     <Compile Include="Menu\IGM\IGMData\IGMData_Clock.cs" />
     <Compile Include="Menu\IGM\IGMData\IGMData_Footer.cs" />
