fixing some menus
Some menus aren't thowing errors. because there is a default constructor. So instead of breaking completely nothing happens.

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -206,6 +206,7 @@
     <Compile Include="Menu\IGM_Junction\IGMData\Slots\Command.cs" />
     <Compile Include="Menu\Images\HSL.cs" />
     <Compile Include="Menu\LGSG\IGM_LGSG.cs" />
+    <Compile Include="Menu\Lobby\IGMData_Selections.cs" />
     <Compile Include="Menu\Menus.cs" />
     <Compile Include="Battle\Menu\VictoryMenu.cs" />
     <Compile Include="Battle\module_battle.cs" />
