constructor to not have calls to virtual functions.
I think that's the last of that in the core project. instead of using new classname. we can use Create or for for simiplier types you can use properties to set the varibles.

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -155,6 +155,8 @@
     <Compile Include="Battle\Menu\IGMData\Renzokeken.cs" />
     <Compile Include="Card_Game\Card_Game.cs" />
     <Compile Include="Card_Game\EXE_Offsets.cs" />
+    <Compile Include="FfAudio.cs" />
+    <Compile Include="FfVideo.cs" />
     <Compile Include="Image\TDW.cs" />
     <Compile Include="Image\Texture2DWrapper.cs" />
     <Compile Include="Image\Texture_Base.cs" />
