--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -149,10 +149,10 @@
     <Compile Include="Battle\Menu\IGMData\IGMData_PartyItems.cs" />
     <Compile Include="Battle\Menu\IGMData\IGMData_PlayerEXPGroup.cs" />
     <Compile Include="Battle\Menu\IGMData\IGMData_PartyAP.cs" />
-    <Compile Include="Battle\Menu\IGMData\IGMData_TargetEnemies.cs" />
-    <Compile Include="Battle\Menu\IGMData\IGMData_TargetGroup.cs" />
-    <Compile Include="Battle\Menu\IGMData\IGMData_TargetParty.cs" />
+    <Compile Include="Battle\Menu\IGMData\Target\Enemies.cs" />
+    <Compile Include="Battle\Menu\IGMData\Target\Group.cs" />
     <Compile Include="Battle\Menu\IGMData\Renzokeken.cs" />
+    <Compile Include="Battle\Menu\IGMData\Target\Party.cs" />
     <Compile Include="Card_Game\Card_Game.cs" />
     <Compile Include="Card_Game\EXE_Offsets.cs" />
     <Compile Include="FfAudio.cs" />
