--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -210,6 +210,8 @@
     <Compile Include="Menu\IGM_Junction\IGMData\Slots\Command.cs" />
     <Compile Include="Menu\Images\HSL.cs" />
     <Compile Include="Menu\LGSG\IGM_LGSG.cs" />
+    <Compile Include="Menu\LGSG\IGMData\LoadBarBox.cs" />
+    <Compile Include="Menu\LGSG\IGMData\ThreePieceHeader.cs" />
     <Compile Include="Menu\Lobby\IGMData_Selections.cs" />
     <Compile Include="Menu\Menus.cs" />
     <Compile Include="Battle\Menu\VictoryMenu.cs" />
