changed some values to timespan.
I didn't know you can add and subtract timespans. We are losing precision converting to ms when we don't need to. So updated slide class to use timespans.

Adding a count down class.. As shot and duel use countdown timers.

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -160,6 +160,7 @@
     <Compile Include="Battle\Menu\IGMData\Target\Random.cs" />
     <Compile Include="Card_Game\Card_Game.cs" />
     <Compile Include="Card_Game\EXE_Offsets.cs" />
+    <Compile Include="CountDown.cs" />
     <Compile Include="FfAudio.cs" />
     <Compile Include="FfVideo.cs" />
     <Compile Include="Image\TDW.cs" />
