wip pyramid  on battle indicator
Also updated slide to support repeating.

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -158,6 +158,7 @@
     <Compile Include="Battle\Menu\IGMData\Renzokeken.cs" />
     <Compile Include="Battle\Menu\IGMData\Target\Party.cs" />
     <Compile Include="Battle\Menu\IGMData\Target\Random.cs" />
+    <Compile Include="Battle\RegularPyramid.cs" />
     <Compile Include="Card_Game\Card_Game.cs" />
     <Compile Include="Card_Game\EXE_Offsets.cs" />
     <Compile Include="CountDown.cs" />
