--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -135,6 +135,7 @@
   <ItemGroup>
     <Compile Include="ArchiveWorker.cs" />
     <Compile Include="Battle\BattleSwirl.cs" />
+    <Compile Include="Battle\DeadTime.cs" />
     <Compile Include="Battle\debug_battleDat.cs" />
     <Compile Include="Battle\Enemy.cs" />
     <Compile Include="Battle\FPS_Camera.cs" />
