Made it so non tims can fail silent with no exception
I had to do this because try catch block is slow.

Working on adding a mag class.

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -142,6 +142,7 @@
     <Compile Include="Battle\IEnemy.cs" />
     <Compile Include="Battle\Information.cs" />
     <Compile Include="Battle\init_debugger_battle.cs" />
+    <Compile Include="Battle\Mag.cs" />
     <Compile Include="Battle\Menu\BattleMenu.cs" />
     <Compile Include="Battle\Menu\BattleMenus.cs" />
     <Compile Include="Battle\Menu\IGMDataItem\Gradient\ATB.cs" />
