Moved Quad code into SP2
This is WIP. But anyway. I took the code i wrote for Icons and tried to make it more universal for all SP2 derived classes. Also added some support for entrygroups with more than one part. All untested but figure we can work the bugs out when we actually need it. Single part images should work fine.

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -222,6 +222,7 @@
     <Compile Include="Menu\IGM_Junction\IGMData\Slots\Abilities.cs" />
     <Compile Include="Menu\IGM_Junction\IGMData\Slots\Command.cs" />
     <Compile Include="Menu\Images\HSL.cs" />
+    <Compile Include="Menu\Images\VertexPositionTexture_Texture2D.cs" />
     <Compile Include="Menu\LGSG\IGMData\GameBlock.cs" />
     <Compile Include="Menu\LGSG\IGMData\GameChoose.cs" />
     <Compile Include="Menu\LGSG\IGMData\SlotChoose.cs" />
