--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -30,7 +30,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'DebugWindows|x86'">
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>..\bin\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;_WINDOWS</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;_WINDOWS;_X86</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <DebugType>full</DebugType>
     <PlatformTarget>x86</PlatformTarget>
@@ -136,6 +136,14 @@
     <Compile Include="Archive.cs" />
     <Compile Include="Archives.cs" />
     <Compile Include="ArchiveWorker.cs" />
+    <Compile Include="AV\Audio.cs" />
+    <Compile Include="AV\Movie\Directories.cs" />
+    <Compile Include="AV\Movie\Files.cs" />
+    <Compile Include="AV\Midi\Fluid.cs" />
+    <Compile Include="AV\Midi\DirectMedia.cs" />
+    <Compile Include="AV\Movie\Player.cs" />
+    <Compile Include="AV\Movie\STATE.cs" />
+    <Compile Include="AV\Video.cs" />
     <Compile Include="Battle\BattleSwirl.cs" />
     <Compile Include="Battle\DeadTime.cs" />
     <Compile Include="Battle\debug_battleDat.cs" />
@@ -165,12 +173,11 @@
     <Compile Include="Battle\Menu\IGMData\Target\Party.cs" />
     <Compile Include="Battle\Menu\IGMData\Target\Random.cs" />
     <Compile Include="Battle\RegularPyramid.cs" />
+    <Compile Include="Buffer_Data.cs" />
     <Compile Include="Card_Game\Card_Game.cs" />
     <Compile Include="Card_Game\EXE_Offsets.cs" />
     <Compile Include="Card_Game\Faces.cs" />
     <Compile Include="CountDown.cs" />
-    <Compile Include="FfAudio.cs" />
-    <Compile Include="FfVideo.cs" />
     <Compile Include="Field\Tile.cs" />
     <Compile Include="Image\TDW.cs" />
     <Compile Include="Image\Texture2DWrapper.cs" />
@@ -241,12 +248,10 @@
     <Compile Include="Battle\module_battle_Debug.cs" />
     <Compile Include="Characters.cs" />
     <Compile Include="DictionaryEx.cs" />
-    <Compile Include="DM_Midi.cs" />
     <Compile Include="Image\Entry.cs" />
     <Compile Include="Image\EntryGroup.cs" />
     <Compile Include="ExtapathyExtended.cs" />
     <Compile Include="Extended.cs" />
-    <Compile Include="Fluid_Midi.cs" />
     <Compile Include="Menu\Images\Box_Options.cs" />
     <Compile Include="Menu\Lobby\IGM_Lobby.cs" />
     <Compile Include="Menu\Menu_Base.cs" />
@@ -263,8 +268,8 @@
     <Compile Include="Strings\Description.cs" />
     <Compile Include="Strings\FF8String.cs" />
     <Compile Include="Strings\FF8StringReference.cs" />
-    <Compile Include="Ffcc.cs" />
-    <Compile Include="FfccVaribleGroup.cs" />
+    <Compile Include="AV\Ffcc.cs" />
+    <Compile Include="AV\FfccVaribleGroup.cs" />
     <Compile Include="FFmpegBinariesHelper.cs" />
     <Compile Include="Field\Core\AreaName.cs" />
     <Compile Include="Field\Core\BreakAwaitable.cs" />
@@ -761,7 +766,7 @@
     <Compile Include="Font.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="GFs.cs" />
-    <Compile Include="init_debugger_Audio.cs" />
+    <Compile Include="AV\init_debugger_Audio.cs" />
     <Compile Include="Kernel\Kernel_bin.Abilities.cs" />
     <Compile Include="Kernel\Kernel_bin.Ability.cs" />
     <Compile Include="Kernel\Kernel_bin.AbilityFlags2.cs" />
@@ -879,7 +884,7 @@
     <Compile Include="Strings\Strings.Areames.cs" />
     <Compile Include="Strings\Strings.cs" />
     <Compile Include="ModuleHandler.cs" />
-    <Compile Include="module_movie_test.cs" />
+    <Compile Include="AV\module_movie_test.cs" />
     <Compile Include="module_overture_debug.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Saves\Saves.CharacterData.cs" />
