--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -178,6 +178,8 @@
     <Compile Include="Card_Game\EXE_Offsets.cs" />
     <Compile Include="Card_Game\Faces.cs" />
     <Compile Include="CountDown.cs" />
+    <Compile Include="Field\BlendMode.cs" />
+    <Compile Include="Field\TextureType.cs" />
     <Compile Include="Image\TextureBuffer.cs" />
     <Compile Include="Field\Tile.cs" />
     <Compile Include="Image\TDW.cs" />
