Cluts type added.
This can store Clut data in a dictionary fashion. And each cult is varible length.
Ported save code over.
now am dumping palette to png.

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -179,6 +179,7 @@
     <Compile Include="Card_Game\Faces.cs" />
     <Compile Include="CountDown.cs" />
     <Compile Include="Field\BlendMode.cs" />
+    <Compile Include="Image\Cluts.cs" />
     <Compile Include="Field\TextureType.cs" />
     <Compile Include="Image\TextureBuffer.cs" />
     <Compile Include="Field\Tile.cs" />
