--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -133,9 +133,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Archive.cs" />
-    <Compile Include="Archives.cs" />
-    <Compile Include="ArchiveWorker.cs" />
+    <Compile Include="Archive\Archive.cs" />
+    <Compile Include="Archive\Archives.cs" />
+    <Compile Include="Archive\ArchiveWorker.cs" />
     <Compile Include="AV\Audio.cs" />
     <Compile Include="AV\Movie\Directories.cs" />
     <Compile Include="AV\Movie\Files.cs" />
@@ -179,9 +179,9 @@
     <Compile Include="Card_Game\Faces.cs" />
     <Compile Include="CountDown.cs" />
     <Compile Include="Field\Background.cs" />
+    <Compile Include="Field\BackgroundTextureType.cs" />
     <Compile Include="Field\Tiles.cs" />
     <Compile Include="Image\Cluts.cs" />
-    <Compile Include="Field\TextureType.cs" />
     <Compile Include="Image\TextureBuffer.cs" />
     <Compile Include="Field\Tile.cs" />
     <Compile Include="Image\TDW.cs" />
@@ -825,7 +825,7 @@
     <Compile Include="Kernel\Kernel_bin.Weapons_Data.cs" />
     <Compile Include="Kernel\Kernel_bin.Zell_limit_break_parameters.cs" />
     <Compile Include="Loc.cs" />
-    <Compile Include="LZSS.cs" />
+    <Compile Include="Archive\LZSS.cs" />
     <Compile Include="Memory.cs" />
     <Compile Include="Menu\Images\Cards.cs" />
     <Compile Include="Menu\Images\Cards.ID.cs" />
