Basic Animation loop. Scale fixed in quad draw mode.
Fixed blendfactor I think.
split some objects into their own files.

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -180,6 +180,9 @@
     <Compile Include="CountDown.cs" />
     <Compile Include="Field\Background\Background.cs" />
     <Compile Include="Field\Background\BackgroundTextureType.cs" />
+    <Compile Include="Field\Background\BlendMode.cs" />
+    <Compile Include="Field\Background\TextureIDPaletteID.cs" />
+    <Compile Include="Field\Background\TileQuadTexture.cs" />
     <Compile Include="Field\Background\Tiles.cs" />
     <Compile Include="Image\Cluts.cs" />
     <Compile Include="Image\TextureBuffer.cs" />
