--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -134,10 +134,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Archive\Archive.cs" />
+    <Compile Include="Archive\ArchiveBase.cs" />
     <Compile Include="Archive\Archives.cs" />
     <Compile Include="Archive\ArchiveWorker.cs" />
     <Compile Include="Archive\ArchiveZZZ.cs" />
-    <Compile Include="Archive\IArchiveWorker.cs" />
     <Compile Include="AV\Audio.cs" />
     <Compile Include="AV\Movie\Directories.cs" />
     <Compile Include="AV\Movie\Files.cs" />
