--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -180,10 +180,25 @@
     <Compile Include="Card_Game\EXE_Offsets.cs" />
     <Compile Include="Card_Game\Faces.cs" />
     <Compile Include="CountDown.cs" />
+    <Compile Include="Field\Camera\Cameras.cs" />
+    <Compile Include="Field\WalkMesh\Access.cs" />
+    <Compile Include="Field\Background\Background.cs" />
+    <Compile Include="Field\Background\BackgroundTextureType.cs" />
+    <Compile Include="Field\Background\BlendMode.cs" />
+    <Compile Include="Field\Initializer.cs" />
+    <Compile Include="Field\Module.cs" />
     <Compile Include="Field\module_field_object_test.cs" />
     <Compile Include="Field\ONE\FieldCharaOne.cs" />
+    <Compile Include="Field\Background\TextureIDPaletteID.cs" />
+    <Compile Include="Field\Background\Tile.cs" />
+    <Compile Include="Field\Background\TileQuadTexture.cs" />
+    <Compile Include="Field\Background\Tiles.cs" />
+    <Compile Include="Field\WalkMesh\Vert.cs" />
+    <Compile Include="Field\WalkMesh\WalkMesh.cs" />
+    <Compile Include="Image\Cluts.cs" />
     <Compile Include="Image\TDW.cs" />
     <Compile Include="Image\Texture2DWrapper.cs" />
+    <Compile Include="Image\TextureBuffer.cs" />
     <Compile Include="Image\Texture_Base.cs" />
     <Compile Include="Image\TIM_OVERTURE.cs" />
     <Compile Include="Input\Buttons.cs" />
