Adding menu to field to toggle options on and off live. moved toggles enum to module.

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -181,6 +181,7 @@
     <Compile Include="Card_Game\Faces.cs" />
     <Compile Include="CountDown.cs" />
     <Compile Include="Field\Camera\Cameras.cs" />
+    <Compile Include="Field\Menu\FieldMenu.cs" />
     <Compile Include="Field\WalkMesh\Access.cs" />
     <Compile Include="Field\Background\Background.cs" />
     <Compile Include="Field\Background\BackgroundTextureType.cs" />
