--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -218,6 +218,7 @@
     <Compile Include="Input\Inputs_FF8Steam.cs" />
     <Compile Include="Input\Inputs_OpenVIII.cs" />
     <Compile Include="Input\MouseLockMode.cs" />
+    <Compile Include="Log.cs" />
     <Compile Include="Menu\Debug\Debug_Menu.cs" />
     <Compile Include="Menu\IGMDataItem\Base.cs" />
     <Compile Include="Menu\IGMDataItem\Box.cs" />
